syntax = "proto3";

package user;
import "post.proto";

service UserService {
    rpc CreateUser(User) returns (User);
    rpc UpdateUser(User) returns (UpdateUserResponse);
    rpc GetByUserId(GetByIdRequest) returns (User);
}

message GetByIdRequest {
    string user_id = 1;
}

message User {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    repeated Post posts = 4;
}

message Address {

}

message UpdateUserResponse {
    string id = 1;
}